# ros2-rl-swarm

./: README.md
docs/media/simulation/: first_gazebo_sim.webm  first_scan_test.webm  first_swarm_control.webm  first_swarm_manager_test.webm  first_swarm_scan_test.webm  first_swarm_test.webm
docs/structure/: project_structure.txt
robot_description/: CMakeLists.txt  package.xml
robot_description/description/: gazebo_control.xacro  lidar.xacro  robot1.urdf.xacro
robot_description/launch/: check_urdf.launch.py  display.launch.py  gazebo.launch.py  robot_state_publisher.launch.py  rviz.launch.py
robot_description/model/: robot.xacro  test_robot.urdf
robot_description/model/base/: base_link.xacro
robot_description/model/control/: robot.gazebo
robot_description/model/joints/: lidar_joint.xacro  wheels_joints.xacro
robot_description/model/mech/: mecanum_wheel.urdf.xacro  robot_3d_base.urdf.xacro
robot_description/model/robots/: robot_3d.urdf.xacro
robot_description/model/sensors/: imu.urdf.xacro  lidar.urdf.xacro  lidar.xacro
robot_description/rviz/: robot.rviz
robot_gazebo/: CMakeLists.txt  package.xml
robot_gazebo/launch/: robot.launch.py  rsp.launch.py  spawn_robot.launch.py  spawn_swarm.launch.py  world.launch.py
robot_gazebo/worlds/: test_world.sdf
swarm_manager/: CMakeLists.txt  package.xml
swarm_manager/docker/: Dockerfile
swarm_manager/launch/: swarm_manager.launch.py
swarm_manager/src/: rl_agent.py  rl_algorithms.py  swarm_env.py  swarm_manager_node.py
swarm_meta/: CMakeLists.txt  package.xml
(+1 files in other folders)
